Fix mobile hero sizing and filter chevron alignment

--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -32,6 +32,9 @@ h1, .h1{
   @include desktop {
     font-size: 65px;
   }
+  @include mobile {
+    font-size: 42px;
+  }
 }
 
 h2, .h2{
