--- a/assets/scss/templates/_hero-area.scss
+++ b/assets/scss/templates/_hero-area.scss
@@ -5,6 +5,9 @@
   @include tablet {
     padding: 160px 0 100px;
   }
+  @include mobile {
+    padding: 110px 0 60px;
+  }
   h1 {
     position: relative;
     z-index: 2;
